--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Web Labas by Mila Halko</title>
         <link rel="stylesheet" href="style.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
+        </style>
     </head>
     <body>
-        
+        <div class="content">
+            <h1 class="content-title">Laboratory works</h1>
+            <h2 class="content-subtitle">Student: Mila Halko IP-01</h2>
+            <div class="content-labas">
+                <ul class="content-labas-list">
+                    <li><a href="#">laba num.1 - "blocks and links"</a></li>
+                    <li>laba num.2</li>
+                    <li>laba num.3</li>
+                    <li>laba num.4</li>
+                    <li>laba num.5</li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
