--- a/lab1.html
+++ b/lab1.html
@@ -8,7 +8,35 @@
         </style>
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <div class="top">
+            <span class="right-top-span">x</span>
+        </div>
+        <div class="center">
+            <div class="center-main_blocks">
+                <div class="center-main_blocks-top_part">
+                    <div class="center-left">
+
+                    </div>
+                    <div class="center-central_blocks">
+                        <div class="center-top">
+
+                        </div>
+                        <div class="center-central">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="center-bottom">
+
+                </div>
+            </div>
+            <div class="center-right">
+
+            </div>
+        </div>
+        <div class="bottom">
+            <span class="right-bootom-span">y</span>
+        </div>
     </body>
 </html>
     
