--- a/lab1.html
+++ b/lab1.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="top">
-            <span class="right-top-span">x</span>
+            <dix class="right-top-span"><span class="span-top">x</span></div>
         </div>
         <div class="center">
             <div class="center-main_blocks">
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="bottom">
-            <span class="right-bootom-span">y</span>
+            <div class="right-bottom-span"><span class="span-bottom">y</span></div>
         </div>
     </body>
 </html>
