1page in progress

--- a/lab1.html
+++ b/lab1.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Web Labas by Mila Halko</title>
+        <title>Laboratory work #1 by Mila Halko</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">      
         <link rel="stylesheet" href="lab1-style.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
         </style>
     </head>
     <body>
-        <div class="top">
-            <dix class="right-top-span"><span class="span-top">x</span></div>
-        </div>
+        <header>
+            <q>“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.” – Martin Fowler</q>
+            <div class="top-title"><h1>HTML</h1></div>
+        </header>
         <div class="center">
-            <div class="center-main_blocks">
-                <div class="center-main_blocks-top_part">
-                    <div class="center-left">
-
-                    </div>
-                    <div class="center-central_blocks">
-                        <div class="center-top">
+            <div class="center__main-blocks">
+                <div class="main-blocks__top-part">
+                    <nav>
+                    <ul>
+                        <li>HTML main</li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    </nav>
+                    <div class="center__central-blocks">
+                        <div class="center__top">
 
                         </div>
-                        <div class="center-central">
-
+                        <div class="center__main">
+                            <p>
+                                The <span>HyperText Markup Language</span>, or <span>HTML</span> is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
+                            </p>
+                            <a href="https://en.wikipedia.org/wiki/HTML">Wanna read more?..</a>
                         </div>
                     </div>
                 </div>
-                <div class="center-bottom">
+                <div class="center__bottom">
 
                 </div>
             </div>
-            <div class="center-right">
-
-            </div>
+            <aside class="center__right">
+            </aside>
         </div>
-        <div class="bottom">
-            <div class="right-bottom-span"><span class="span-bottom">y</span></div>
-        </div>
+        <footer>
+            <div class="bottom-title"><h2>meaning</h2></div>
+        </footer>
     </body>
 </html>
     
