some paragraphs added

--- a/lab1.html
+++ b/lab1.html
@@ -29,7 +29,7 @@
                     </nav>
                     <div class="center__central-blocks">
                         <div class="center__top">
-
+                            <p>If you didn't know..</p>
                         </div>
                         <div class="center__main">
                             <p>
@@ -47,6 +47,14 @@
             </aside>
         </div>
         <footer>
+            <div>
+                <p>
+                    Imagine that you're building a house. One of the first things you would do to build a house is put up a frame. There would be nothing but plain, wooden beams in the rough shape of a house, and you wouldn't be able to live in it yet, but it would give an approximation of what the house would eventually look like. The frame would provide the foundation you need to keep working.
+                </p>
+                <p>
+                    You can think of HTML as that frame for a webpage. HTML is a computer language known as a markup language, and the vast majority of the webpages you see on the Internet every day are made of HTML, among other things. 
+                </p>
+            </div>
             <div class="bottom-title"><h2>meaning</h2></div>
         </footer>
     </body>
