--- a/lab1.html
+++ b/lab1.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <q>“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.” – Martin Fowler</q>
+            <div><q>“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.” – Martin Fowler</q></div>
             <div class="top-title"><h1>HTML</h1></div>
         </header>
         <div class="center">
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="center__bottom">
-
+                    <p>..HTML is just a piece of cake</p>
                 </div>
             </div>
             <aside class="center__right">
