--- a/lab1.1.html
+++ b/lab1.1.html
@@ -5,10 +5,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">      
-    
-        <link rel="stylesheet" href="fonts.css">
-        <link rel="stylesheet" href="zeroing.css">
-        <link rel="stylesheet" href="lab1.1.css">
+        <link rel="stylesheet" href="lab1-style.css">
+        <link rel="stylesheet" href="menu.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
         </style>
