--- a/lab1.2.html
+++ b/lab1.2.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">      
+        <link rel="stylesheet" href="fonts.css">
         <link rel="stylesheet" href="zeroing.css">
         <link rel="stylesheet" href="lab1.2.css">
         <style>
@@ -13,7 +14,9 @@
     </head>
     <body>
         <header>
-            <div class="top-title"><h1></h1></div>
+            <h2>Why Use CSS?</h2>
+            <p>CSS is used to define styles for your web pages, including the design, layout and variations in display for different devices and screen sizes.</p>
+            <div class="top-title"><h1>CSS</h1></div>
         </header>
         <div class="center">
             <div class="center__main-blocks">
@@ -29,22 +32,38 @@
                     </nav>
                     <div class="center__central-blocks">
                         <div class="center__top">
-                            <p></p>
+                            <p>Click the logo</p>
                         </div>
                         <div class="center__main">
-                            <p>
-                            </p>
+                            <img src="../images/logo_circle.png" height="270" alt="CSS logo" usemap="#navigation">
+                            <map id="navigation" name="navigation">
+                                <area shape="circle" coords="133,133,123" href="https://www.w3schools.com/css/" alt="CSS Tutorial">
+                            </map>
                         </div>
                     </div>
                 </div>
                 <div class="center__bottom">
+                    <p>if you want to learn css</p>
                 </div>
             </div>
             <aside class="center__right">
+                <h2>10 Best Web Safe Fonts</h2>
+                <ol>
+                    <li>Arial</li>
+                    <li>Times New Roman</li>
+                    <li>Times</li>
+                    <li>Courier New</li>
+                    <li>Courier</li>
+                    <li>Verdana</li>
+                    <li>Georgia</li>
+                    <li>Palatino</li>
+                    <li>Garamond</li>
+                    <li>Bookman</li>
+                </ol>
             </aside>
         </div>
         <footer>
-            <div class="bottom-title"><h2></h2></div>
+            <div class="bottom-title"><h2>Interaction</h2></div>
         </footer>
     </body>
 </html>
