--- a/lab1.2.html
+++ b/lab1.2.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li><a href="/lab1.html">HTML main</a></li>
                         <li>CSS</li>
-                        <li></li>
+                        <li><a href="/lab1.3.html">Chill Lorem</a></li>
                         <li></li>
                         <li></li>
                     </ul>
