--- a/lab1.1.html
+++ b/lab1.1.html
@@ -5,8 +5,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">      
-        <link rel="stylesheet" href="lab1-style.css">
-        <link rel="stylesheet" href="menu.css">
+        <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="zeroing.css">
+        <link rel="stylesheet" href="lab1.1.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
         </style>
@@ -23,7 +24,7 @@
                     <ul>
                         <li>HTML main</li>
                         <li><a href="./lab1.2.html">CSS</a></li>
-                        <li><a href="./lab1.3.html">Chill Lorem</a></li>
+                        <li><a href="./lab1.2.css">Chill Lorem</a></li>
                         <li></li>
                         <li></li>
                     </ul>
