--- a/lab1.1.html
+++ b/lab1.1.html
@@ -24,7 +24,7 @@
                     <ul>
                         <li>HTML main</li>
                         <li><a href="./lab1.2.html">CSS</a></li>
-                        <li><a href="./lab1.2.css">Chill Lorem</a></li>
+                        <li><a href="./lab1.3.html">Chill Lorem</a></li>
                         <li></li>
                         <li></li>
                     </ul>
