--- a/lab1.3.html
+++ b/lab1.3.html
@@ -5,8 +5,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">      
+        <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="zeroing.css">
         <link rel="stylesheet" href="lab1.3.css">
-        <link rel="stylesheet" href="menu.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
         </style>
@@ -20,7 +21,7 @@
                 <div class="main-blocks__top-part">
                     <nav>
                     <ul>
-                        <li><a href="/lab1.html">HTML main</a></li>
+                        <li><a href="/lab1.1.html">HTML main</a></li>
                         <li><a href="/lab1.2.html">CSS</a></li>
                         <li>Chill Lorem</li>
                         <li></li>
