--- a/lab1.2.html
+++ b/lab1.2.html
@@ -35,7 +35,7 @@
                             <p>Click the logo</p>
                         </div>
                         <div class="center__main">
-                            <img src="../images/logo_circle.png" height="270" alt="CSS logo" usemap="#navigation">
+                            <img src="./images/logo_circle.png" height="270" alt="CSS logo" usemap="#navigation">
                             <map id="navigation" name="navigation">
                                 <area shape="circle" coords="133,133,123" href="https://www.w3schools.com/css/" alt="CSS Tutorial">
                             </map>
