--- a/lab1.2.html
+++ b/lab1.2.html
@@ -23,9 +23,9 @@
                 <div class="main-blocks__top-part">
                     <nav>
                     <ul>
-                        <li><a href="/lab1.1.html">HTML main</a></li>
+                        <li><a href="./lab1.1.html">HTML main</a></li>
                         <li>CSS</li>
-                        <li><a href="/lab1.3.html">Chill Lorem</a></li>
+                        <li><a href="./lab1.3.html">Chill Lorem</a></li>
                         <li></li>
                         <li></li>
                     </ul>
