--- a/lab1.3.html
+++ b/lab1.3.html
@@ -21,8 +21,8 @@
                 <div class="main-blocks__top-part">
                     <nav>
                     <ul>
-                        <li><a href="/lab1.1.html">HTML main</a></li>
-                        <li><a href="/lab1.2.html">CSS</a></li>
+                        <li><a href="./lab1.1.html">HTML main</a></li>
+                        <li><a href="./lab1.2.html">CSS</a></li>
                         <li>Chill Lorem</li>
                         <li></li>
                         <li></li>
