--- a/lab1.3.html
+++ b/lab1.3.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-            <div class="top-title"><h1></h1></div>
+            <div class="top-title"><h1>Lorem</h1></div>
         </header>
         <div class="center">
             <div class="center__main-blocks">
@@ -30,22 +30,36 @@
                     </nav>
                     <div class="center__central-blocks">
                         <div class="center__top">
-                            <p></p>
+                            <p>Lorem ipsum dolor sit.</p>
                         </div>
                         <div class="center__main">
-                            <p>
-                            </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, aspernatur quam? Aliquid, dolor ratione dolorem deleniti fugiat numquam explicabo vitae in cupiditate quaerat earum minima itaque magni inventore soluta quod?</p>
                         </div>
                     </div>
                 </div>
                 <div class="center__bottom">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
             </div>
             <aside class="center__right">
+                <h2><a href="https://ru.wikipedia.org/wiki/Lorem_ipsum">Lorem</a></h2>
+                <ul>
+                    <li>Lorem</li>
+                    <li>Lorem</li>
+                    <li>Lorem</li>
+                    <li>Lorem</li>
+                    <li>Lorem</li>
+                    <li>Lorem</li>
+                    <li>Lorem</li>
+                    <li>Lorem</li>
+                    <li>Lorem</li>
+                    <li>Lorem</li>
+                </ul>
             </aside>
         </div>
         <footer>
-            <div class="bottom-title"><h2></h2></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, sapiente eaque? Unde eius possimus minus ad officiis architecto reiciendis consectetur labore saepe dicta totam aspernatur nostrum distinctio, blanditiis illo. Iste?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ab adipisci minus consequuntur voluptates labore eos architecto rerum beatae, ut fuga expedita odio cum, laborum sint sequi assumenda quibusdam Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eveniet labore itaque laboriosam alias unde, autem quam nulla tenetur repellat corrupti cupiditate commodi similique provident, eos repellendus, dolore perferendis officiis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio voluptatibus illum voluptatum dolorum inventore cupiditate possimus iusto cum. Delectus totam blanditiis voluptate non aperiam quod distinctio rem, ab libero neque!Lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum dolorem sapiente culpa ad ipsum assumenda eum impedit iure perspiciatis harum eveniet earum illo deleniti blanditiis provident fuga, amet inventore reiciendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, dolore pariatur. Minima quis, esse quos nisi ipsa facilis qui eius iure necessitatibus molestias ea vitae saepe omnis cumque eum distinctio. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab sunt dolorum dolorem? Voluptatum, dolores error! Optio dolore cumque sed, nam esse aliquam doloribus! Ipsum laboriosam ratione expedita iusto error eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, recusandae aut error dolor vel ad enim tempore illo earum! Eius quisquam natus repellendus impedit ad modi voluptatibus pariatur doloribus dolor?</p>
+            <div class="bottom-title"><h2>again Lorem</h2></div>
         </footer>
     </body>
 </html>
