4th page blocks and text

--- a/lab1.3.html
+++ b/lab1.3.html
@@ -24,7 +24,7 @@
                         <li><a href="./lab1.1.html">HTML main</a></li>
                         <li><a href="./lab1.2.html">CSS</a></li>
                         <li>Chill Lorem</li>
-                        <li></li>
+                        <li><a href="./lab1.4.html">Basic</a></li>
                         <li></li>
                     </ul>
                     </nav>
