--- a/lab1.2.html
+++ b/lab1.2.html
@@ -26,7 +26,7 @@
                         <li><a href="./lab1.1.html">HTML main</a></li>
                         <li>CSS</li>
                         <li><a href="./lab1.3.html">Chill Lorem</a></li>
-                        <li></li>
+                        <li><a href="./lab1.4.html">Basic</a></li>
                         <li></li>
                     </ul>
                     </nav>
