--- a/lab1.4.html
+++ b/lab1.4.html
@@ -5,46 +5,52 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">      
-        <link rel="stylesheet" href="lab1-style.css">
-        <link rel="stylesheet" href="menu.css">
+        <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="zeroing.css">
+        <link rel="stylesheet" href="lab1.4.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
         </style>
     </head>
     <body>
         <header>
-            <div class="top-title"><h1></h1></div>
-        </header>
+            <p>Pseudo-classes are used in CSS selectors to permit formatting based on information that is not contained in the document tree.</p>
+            <div class="top-title"><h1>Laboratory</h1></div>
+            </header>
         <div class="center">
             <div class="center__main-blocks">
                 <div class="main-blocks__top-part">
                     <nav>
                     <ul>
-                        <li><a href="/lab1.1.html">HTML main</a></li>
-                        <li>CSS</li>
-                        <li></li>
-                        <li></li>
+                        <li><a href="./lab1.1.html">HTML main</a></li>
+                        <li><a href="./lab1.2.html">CSS</a></li>
+                        <li><a href="./lab1.3.html">Chill Lorem</a></li>
+                        <li>Basic</li>
                         <li></li>
                     </ul>
                     </nav>
                     <div class="center__central-blocks">
                         <div class="center__top">
-                            <p></p>
+                            <p>CSS information can be provided from various sources.</p>
                         </div>
                         <div class="center__main">
                             <p>
+                                Selectors may be combined in many ways to achieve great specificity and flexibility. Multiple selectors may be joined in a spaced list to specify elements by location, element type, id, class, or any combination thereof. The order of the selectors is important. For example, div .myClass {color: red;} applies to all elements of class myClass that are inside div elements, whereas .myClass div {color: red;} applies to all div elements that are inside elements of class myClass. This is not to be confused with concatenated identifiers such as div.myClass {color: red;} which applies to div elements of class myClass.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="center__bottom">
+                    Using CSS, the same element can be coded using style properties instead of HTML presentational attributes
                 </div>
             </div>
             <aside class="center__right">
+                <p>The style sheet with the highest priority controls the content display. Declarations not set in the highest priority source are passed on to a source of lower priority, such as the user agent style. The process is called cascading.</p>
             </aside>
         </div>
         <footer>
-            <div class="bottom-title"><h2></h2></div>
+            <p>Selectors may be combined in many ways to achieve great specificity and flexibility.[7] Multiple selectors may be joined in a spaced list to specify elements by location, element type, id, class, or any combination thereof. The order of the selectors is important. For example, div .myClass {color: red;} applies to all elements of class myClass that are inside div elements, whereas .myClass div {color: red;} applies to all div elements that are inside elements of class myClass. This is not to be confused with concatenated identifiers such as div.myClass {color: red;} which applies to div elements of class myClass.</p>
+            <div class="bottom-title"><h2>Selector</h2></div>
         </footer>
     </body>
 </html>
