--- a/lab1.1.html
+++ b/lab1.1.html
@@ -25,8 +25,8 @@
                         <li>HTML main</li>
                         <li><a href="./lab1.2.html">CSS</a></li>
                         <li><a href="./lab1.3.html">Chill Lorem</a></li>
-                        <li></li>
-                        <li></li>
+                        <li><a href="./lab1.4.html">Basic</a></li>
+                        <li><a href="./lab1.5.html">SEO</a></li>
                     </ul>
                     </nav>
                     <div class="center__central-blocks">
