--- a/lab1.2.html
+++ b/lab1.2.html
@@ -27,7 +27,7 @@
                         <li>CSS</li>
                         <li><a href="./lab1.3.html">Chill Lorem</a></li>
                         <li><a href="./lab1.4.html">Basic</a></li>
-                        <li></li>
+                        <li><a href="./lab1.5.html">SEO</a></li>
                     </ul>
                     </nav>
                     <div class="center__central-blocks">
