--- a/lab1.3.html
+++ b/lab1.3.html
@@ -25,7 +25,7 @@
                         <li><a href="./lab1.2.html">CSS</a></li>
                         <li>Chill Lorem</li>
                         <li><a href="./lab1.4.html">Basic</a></li>
-                        <li></li>
+                        <li><a href="./lab1.5.html">SEO</a></li>
                     </ul>
                     </nav>
                     <div class="center__central-blocks">
