--- a/lab1.5.html
+++ b/lab1.5.html
@@ -5,46 +5,58 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">      
-        <link rel="stylesheet" href="lab1-style.css">
-        <link rel="stylesheet" href="menu.css">
+        <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="zeroing.css">
+        <link rel="stylesheet" href="lab1.5.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
         </style>
     </head>
     <body>
         <header>
-            <div class="top-title"><h1></h1></div>
+            <div class="top-title"><h1>SEO</h1></div>
         </header>
         <div class="center">
             <div class="center__main-blocks">
                 <div class="main-blocks__top-part">
                     <nav>
                     <ul>
-                        <li><a href="/lab1.1.html">HTML main</a></li>
-                        <li>CSS</li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><a href="./lab1.1.html">HTML main</a></li>
+                        <li><a href="./lab1.2.html">CSS</a></li>
+                        <li><a href="./lab1.3.html">Chill Lorem</a></li>
+                        <li><a href="./lab1.4.html">Basic</a></li>
+                        <li>SEO</li>
                     </ul>
                     </nav>
                     <div class="center__central-blocks">
                         <div class="center__top">
-                            <p></p>
+                            <p>As marketing strategy</p>
                         </div>
                         <div class="center__main">
-                            <p>
-                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="center__bottom">
+                    <p>more visitors from a search</p>
                 </div>
             </div>
             <aside class="center__right">
+                <h3>Components:</h3>
+                <ul>
+                    <li>Marketing</li>
+                    <li>Target group</li>
+                    <li>Links</li>
+                    <li>Content</li>
+                    <li>Search</li>
+                    <li>Ranking</li>
+                    <li>Perfomance Measurement</li>
+                    <li>WWW</li>
+                </ul>
             </aside>
         </div>
         <footer>
-            <div class="bottom-title"><h2></h2></div>
+            <p><span>Search engine optimization (SEO)</span> is the process of improving the quality and quantity of website traffic to a website or a web page from search engines. <span>SEO</span> targets unpaid traffic (known as "natural" or "organic" results) rather than direct traffic or paid traffic. Unpaid traffic may originate from different kinds of searches, including image search, video search, academic search, news search, and industry-specific vertical search engines.</p>
+            <div class="bottom-title"><h2>Principles</h2></div>
         </footer>
     </body>
 </html>
