--- a/lab1.4.html
+++ b/lab1.4.html
@@ -26,7 +26,7 @@
                         <li><a href="./lab1.2.html">CSS</a></li>
                         <li><a href="./lab1.3.html">Chill Lorem</a></li>
                         <li>Basic</li>
-                        <li></li>
+                        <li><a href="./lab1.5.html">SEO</a></li>
                     </ul>
                     </nav>
                     <div class="center__central-blocks">
