--- a/lab1.2.html
+++ b/lab1.2.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">      
         <link rel="stylesheet" href="fonts.css">
         <link rel="stylesheet" href="zeroing.css">
+        <link rel="stylesheet" href="blocks-composing.css">
         <link rel="stylesheet" href="lab1.2.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
