--- a/lab1.2.html
+++ b/lab1.2.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <h2>Why Use CSS?</h2>
+            <div class="h2"><h2>Why Use CSS?</h2></div>
             <p>CSS is used to define styles for your web pages, including the design, layout and variations in display for different devices and screen sizes.</p>
             <div class="top-title"><h1>CSS</h1></div>
         </header>
