4th page blocks composition

--- a/lab1.4.html
+++ b/lab1.4.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">      
         <link rel="stylesheet" href="fonts.css">
         <link rel="stylesheet" href="zeroing.css">
+        <link rel="stylesheet" href="blocks-composing.css">
         <link rel="stylesheet" href="lab1.4.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Glory:wght@100&display=swap');
@@ -41,7 +42,7 @@
                     </div>
                 </div>
                 <div class="center__bottom">
-                    Using CSS, the same element can be coded using style properties instead of HTML presentational attributes
+                    <p>Using CSS, the same element can be coded using style properties instead of HTML presentational attributes</p>
                 </div>
             </div>
             <aside class="center__right">
